--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,29 +23,39 @@ jobs:
           ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
             set -e
 
-            # trust github
+            # доверяем github
             mkdir -p ~/.ssh
             ssh-keyscan github.com >> ~/.ssh/known_hosts
 
-            # poetry
+            # устанавливаем poetry, если нет
             if ! command -v poetry &> /dev/null; then
               curl -sSL https://install.python-poetry.org | python3 -
             fi
             export PATH="$HOME/.local/bin:$PATH"
 
-            # проект
+            # клонируем или обновляем проект
             if [ ! -d "${{ secrets.APP_PATH }}" ]; then
               git clone git@github.com:alevch10/amplitude_downloader.git "${{ secrets.APP_PATH }}"
             fi
-
             cd "${{ secrets.APP_PATH }}"
             git fetch origin
             git checkout master
             git pull origin master
 
-            # фиксированное окружение внутри проекта
+            # фиксированное окружение в проекте
             poetry config virtualenvs.in-project true
             poetry install --only main
+
+            # создаём .env через printf для сохранения форматирования
+            printf "AMPLITUDE_CLIENT_ID=%s\nAMPLITUDE_SECRET_ID=%s\nAWS_ACCESS_KEY_ID=%s\nAWS_SECRET_ACCESS_KEY=%s\nAWS_DEFAULT_REGION=%s\nS3_ENDPOINT_URL=%s\nS3_BUCKET_NAME=%s\nDEBUG=%s\n" \
+              "${{ secrets.AMPLITUDE_CLIENT_ID }}" \
+              "${{ secrets.AMPLITUDE_SECRET_ID }}" \
+              "${{ secrets.AWS_ACCESS_KEY_ID }}" \
+              "${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+              "${{ secrets.AWS_DEFAULT_REGION }}" \
+              "${{ secrets.S3_ENDPOINT_URL }}" \
+              "${{ secrets.S3_BUCKET_NAME }}" \
+              "${{ secrets.DEBUG }}" > .env
 
             # перезапуск systemd
             sudo systemctl daemon-reload
