--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Deploy to server
         run: |
-          # экспортируем секреты в Actions shell
+          # Экспортируем секреты в Actions shell
           export AMPLITUDE_CLIENT_ID="${{ secrets.AMPLITUDE_CLIENT_ID }}"
           export AMPLITUDE_SECRET_ID="${{ secrets.AMPLITUDE_SECRET_ID }}"
           export AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}"
@@ -30,7 +30,7 @@ jobs:
           export S3_BUCKET_NAME="${{ secrets.S3_BUCKET_NAME }}"
           export DEBUG="${{ secrets.DEBUG }}"
 
-          # подключаемся к серверу
+          # Подключаемся к серверу
           ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << EOF
             set -e
 
@@ -48,16 +48,15 @@ jobs:
             fi
 
             # устанавливаем poetry, если ещё нет
-            if ! command -v poetry &> /dev/null; then
+            if ! command -v /root/.local/bin/poetry &> /dev/null; then
               curl -sSL https://install.python-poetry.org | python3 -
             fi
-            export PATH="$HOME/.local/bin:$PATH"
 
             # создаём виртуальное окружение внутри проекта
-            poetry config virtualenvs.in-project true
-            poetry install --only main
+            /root/.local/bin/poetry config virtualenvs.in-project true
+            /root/.local/bin/poetry install --only main
 
-            # создаём .env с правильными значениями
+            # создаём .env с секретами
             printf "AMPLITUDE_CLIENT_ID=%s\nAMPLITUDE_SECRET_ID=%s\nAWS_ACCESS_KEY_ID=%s\nAWS_SECRET_ACCESS_KEY=%s\nAWS_DEFAULT_REGION=%s\nS3_ENDPOINT_URL=%s\nS3_BUCKET_NAME=%s\nDEBUG=%s\n" \
               "$AMPLITUDE_CLIENT_ID" \
               "$AMPLITUDE_SECRET_ID" \
