--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "boto3 (>=1.40.38,<2.0.0)",
     "requests (>=2.32.5,<3.0.0)",
     "aiohttp (>=3.12.15,<4.0.0)",
-    "python-multipart (>=0.0.20,<0.0.21)"
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "psutil (>=7.1.0,<8.0.0)"
 ]
 
 
